fix: autofilling text fields crated wrong background

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/prebuilt-themes/pink-bluegrey.css';
+@import '@angular/cdk/_text-field'; 
+
+// Set custom-autofill inputs to have no background and red text.
+input {
+  @include cdk-text-field-autofill-color(transparent, #fff);
+}
 
 body {
     margin: 0;
@@ -33,4 +39,19 @@ mat-sidenav-container {
   
 .form-container form > * {
     margin: 5px 0;
+}
+
+button.mat-menu-item {
+  line-height: 24px !important;
+}
+a.mat-menu-item > mat-icon {
+    margin-bottom: 14px;
+}
+.mat-icon svg {
+    height: 24px;
+    width: 24px;
+}
+.mat-step-icon-content .mat-icon svg {
+    height: 100%;
+    width: 100%;
 }
